# MIE1624-Project-Chatbot

basic_crewai_1/: README.md  pyproject.toml  report.md
basic_crewai_1/data/: MIE1624_Project_Policy&Governance.ipynb  Project_CLuster_and_visuals.ipynb  RD_Analysis_v2.ipynb  Science_and_Medicine_ranking_plots.ipynb  canada_ai_education_trust_analysis.ipynb  cluster_final.ipynb  economy_context.json  final_report.docx  policy_context.json  pr_strategy_context.json  rai_context.json  rd_context.json  recommendations_context.json
basic_crewai_1/knowledge/: user_preference.txt
basic_crewai_1/src/basic_crewai_1/: app.py  crew.py  main.py
basic_crewai_1/src/basic_crewai_1/config/: agents.yaml  tasks.yaml
basic_crewai_1/src/basic_crewai_1/tools/: custom_tool.py
